Wed Mar 24 22:36:01 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* ace/POSIX_Proactor.cpp:

	  Fixed warning in g++ builds.

	* ace/Task.h (activate):
	* ace/Thread_Manager.cpp:
	* ace/Thread_Manager.h (spawn and spawn_n):

	  Changed the default flags in the above methods. They now include
	  THR_INHERIT_SCHED. This makes the defaults consistent with C++
	  NPV1 and C++ NPV2. If a priority other than
	  ACE_DEFAULT_THREAD_PRIORITY is passed into the <priority>
	  argument, the THR_INHERIT_SCHED flag is dropped silently. This
	  takes care of the problems reported by Abhijit Sachdev, which
	  was basically a bug that prevented the priorities being
	  inherited in thread-per-connection strategy. 

	  Thanks to Steve Huston for motivating the right fix that would
	  not affect user code at all.

Wed Mar 24 16:41:29 2004  Steve Huston  <shuston@riverace.com>

	* ACE-INSTALL.html: Remove remaining reference to the "soft link"
	  method of specifying a platform-specific config.h and
	  platform_macros.GNU file. All instructions regarding these now
	  use the preferred method - creating a local file and including
	  the platform-specific one into it. Also cleaned up some old info.

	* PROBLEM-REPORT-FORM: Direct the user to not include an entire
	  platform-specific config.h or platform_macros.GNU file. This is
	  an effort to make submitted forms more concise and easy to read.

Wed Mar 24 07:25:19 2004  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/Creator.pm:
        * bin/MakeProjectCreator/modules/ProjectCreator.pm:

          Fixed a bug where settings were not being properly reset when
          processing a 'specific' section for one project and then
          processing other projects.

Tue Mar 23 22:13:01 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

        * bin/tao_orb_tests.lst:

          Added new PortableInterceptors ORB::shutdown() regression test
          to the nightly build test runs.
